--- a/.github/workflows/.github/workflows/build-aarch64.yml
+++ b/.github/workflows/.github/workflows/build-aarch64.yml
@@ -1,34 +1,37 @@
-name: Build Ubuntu aarch64 Binary
+name: Build + Release linux/arm64
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
+    tags:
+      - 'v*'    # run when you push tags like v1.2.3
 
 jobs:
-  build-aarch64:
-    name: Build on Ubuntu (aarch64)
+  build-and-release:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Set up Go (teldrive is written in Go)
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: '1.22'
 
-      # Build for aarch64 (ARM64)
-      - name: Build binary for aarch64
+      - name: Build binary
         run: |
           mkdir -p dist
-          GOOS=linux GOARCH=arm64 go build -o dist/teldrive_linux_arm64 .
+          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o dist/teldrive_linux_arm64 .
 
-      # Upload compiled binary as an artifact
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
         with:
-          name: teldrive-linux-arm64
-          path: dist/teldrive_linux_arm64
+          tag_name: ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload release asset
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/teldrive_linux_arm64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
